k8s/pod_watcher.yaml
apiVersion: v1
kind: Pod
metadata:
  name: watcher
  labels:
    name: watcher
    owner: EliseevVladimir
spec:
  containers:
    - image: praqma/network-multitool
      name: watcher
