k8s/svc_cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    env: prod
    owner: EliseevVladimir
spec:
  selector:
    project: echo     # selector for pods
  ports:
    - name: echo-listner
      protocol: TCP
      port: 8080        # port on ClusterIP
      targetPort: 8080  # port on POD
  type: ClusterIP
