k8s/svc_for_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    env: prod
    owner: EliseevVladimir
spec:
  selector:
    project: echo     # selector for pods
  ports:
    - name: echo-listner
      protocol: TCP
      port: 8080        # port on ClusterIP
      targetPort: 8080  # port on POD
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: watcher
  labels:
    env: prod
    owner: EliseevVladimir
spec:
  selector:
    project: watcher     # selector for pods
  ports:
    - name: watcher-listner
      protocol: TCP
      port: 80        # port on ClusterIP
      targetPort: 80  # port on POD
  type: ClusterIP
