k8s/svc_node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    env: prod
    owner: EliseevVladimir
spec:
  selector:
    project: echo   # selector for pods
  ports:
    - name: echo-listner
      protocol: TCP
      port: 8080        # port on all Nodes
      targetPort: 8080  # port on selecting POD
  type: NodePort
